summary: A NetApp oferece recursos novos e aprimorados em todas as versões dos serviços do Keystone STaaS. 
---
= Novidades do Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Saiba mais sobre os recursos e aprimoramentos mais recentes nos serviços Keystone STaaS.



== 24 de novembro de 2025

Novos aprimoramentos no painel do Keystone no NetApp Console:



=== ID de rastreamento para assinaturas com período de cobertura limitado

Na caixa de notificação *Conclua sua cobertura* em *Monitoramento > Monitores de alerta*, cada assinatura agora exibe seu ID de rastreamento ao lado do número da assinatura.



== 10 de novembro de 2025

Novos aprimoramentos no painel do Keystone no NetApp Console:



=== Preencha o formulário de notificação de cobertura.

A aba *Alertas de monitoramento* na página *Monitoramento* inclui uma caixa de notificação *Complete sua cobertura* que aparece quando existem lacunas de cobertura.  Esta caixa lista as assinaturas que não possuem monitores de capacidade ou expiração, e os monitores sem assinaturas.  Você pode solucionar as lacunas adicionando assinaturas a monitores existentes, criando novos monitores ou excluindo monitores não utilizados. Para saber mais, consulte link:https://docs.netapp.com/us-en/keystone-staas/integrations/monitoring-alert-monitors.html#manage-coverage-gaps["Gerenciar lacunas de cobertura para monitores de alerta"].



== 13 de outubro de 2025

Novos aprimoramentos no painel do Keystone no NetApp Console:



=== Coluna de substituição de política de QoS na guia Ativos

A guia *Volumes em clusters* dentro da guia *Ativos* agora inclui uma coluna *Substituição de política de QoS* que indica se as regras de QoS são ignoradas para volumes de backup e espelho, exibindo *verdadeiro* (regras ignoradas), *falso* (regras aplicadas) ou *N/D* (para volumes espelho).

