@@ -29,33 +29,21 @@ Siga estes passos:
 . Em _Etapa 1_ do assistente *Deploy OVF Template*, clique em *Select e OVF template* para selecionar o arquivo baixado `KeystoneCollector-latest.ova`.
 . Em _Etapa 2_, especifique o nome da VM e selecione a pasta da VM.
 . Em _Etapa 3_, especifique o recurso de computação necessário para executar a VM.
-. Em _Etapa 4: Revise os detalhes_, verifique a correção e autenticidade do arquivo OVA. As versões do vCentre anteriores a 7.0u2 não conseguem verificar automaticamente a autenticidade do certificado de assinatura de código. VCentre 7.0u2 e posteriores podem realizar as verificações. No entanto, para isso, a autoridade do certificado de assinatura deve ser adicionada ao vCentre. Siga estas instruções para a sua versão do vCentre:
+. Na etapa 4: Revisar detalhes, verifique a correção e a autenticidade do arquivo OVA.
 +
-.VCentre 7.0u1 e anteriores: Saiba mais
-[%collapsible]
-====
-O vCentre valida a integridade do conteúdo do arquivo OVA e é fornecido um resumo válido de assinatura de código para os arquivos contidos no ARQUIVO OVA. No entanto, ele não valida a autenticidade do certificado de assinatura de código. Para verificar a integridade, você deve baixar o certificado de resumo de assinatura completo e verificá-lo em relação ao certificado público publicado pelo Keystone.
+O armazenamento confiável raiz do vCenter contém apenas certificados VMware. A NetApp usa o Entrust como autoridade de certificação, e esses certificados precisam ser adicionados ao armazenamento confiável do vCenter.
 
-.. Clique no link *Publisher* para baixar o certificado de resumo completo da assinatura.
-.. Faça o download do certificado público do _Keystone Billing_ em https://keystone.netapp.com/downloads/OVA-SSL-NetApp-Keystone-20251020.pem["este link"^].
-.. Verifique a autenticidade do certificado de assinatura OVA comparando-o com o certificado público usando o OpenSSL:
-`openssl verify -CAfile OVA-SSL-NetApp-Keystone-20251020.pem keystone-collector.cert`
-
-
-====
 +
-.VCentre 7.0u2 e posterior: Saiba mais
-[%collapsible]
-====
-7.0u2 e versões posteriores do vCenter são capazes de validar a integridade do conteúdo do arquivo OVA e a autenticidade do certificado de assinatura de código, quando um resumo válido de assinatura de código é fornecido. O armazenamento de confiança raiz do vCenter contém apenas certificados VMware. O NetApp usa o Entrust como autoridade de certificação e esses certificados precisam ser adicionados ao armazenamento de confiança do vCenter.
-
 .. Baixe o certificado de CA de assinatura de código da Sectigo. https://comodoca.my.salesforce.com/sfc/p/1N000002Ljih/a/3l000000oAhy/QCCby12C7cYo50nNyic6AuG1KFcwe1rDn1EknfTaUzY["aqui"^].
 .. Siga as etapas na `Resolution` seção deste artigo da base de conhecimento (KB) https://kb.vmware.com/s/article/84240[]: .
++
 
+NOTE: Para versões do vCenter 7.x e anteriores, você deve atualizar o vCenter e o ESXi para a versão 8.0 ou posterior. As versões anteriores não são mais suportadas.
 
-====
 +
 Quando a integridade e a autenticidade do OVA Keystone Collector forem validadas, você poderá ver o texto. `(Trusted certificate)` com a editora. image:ova-deploy-1.png["OVA UI exibindo um certificado verificado"]
+
+
 
 . Em _Etapa 5_ do assistente *Deploy OVF Template*, especifique o local para armazenar a VM.
 . Em _Etapa 6_, selecione a rede de destino para a VM usar.
